client/src/theme/variables.scss
/** Ionic CSS Variables **/
:root {
    /** primary **/
    --ion-color-primary: #3880ff;
    --ion-color-primary-rgb: 56, 128, 255;
    --ion-color-primary-contrast: #ffffff;
    --ion-color-primary-contrast-rgb: 255, 255, 255;
    --ion-color-primary-shade: #3171e0;
    --ion-color-primary-tint: #4c8dff;
    /** secondary **/
    --ion-color-secondary: #000000;
    --ion-color-secondary-rgb: 12, 209, 232;
    --ion-color-secondary-contrast: #ffffff;
    --ion-color-secondary-contrast-rgb: 255, 255, 255;
    --ion-color-secondary-shade: #0bb8cc;
    --ion-color-secondary-tint: #24d6ea;
  
    /** tertiary **/
    --ion-color-tertiary: #ffa000;
    --ion-color-tertiary-rgb: 112, 68, 255;
    --ion-color-tertiary-contrast: #ffffff;
    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
    --ion-color-tertiary-shade: #ff6600;
    --ion-color-tertiary-tint: #ff6600;
  
    /** success **/
    --ion-color-success: #10dc60;
    --ion-color-success-rgb: 16, 220, 96;
    --ion-color-success-contrast: #ffffff;
    --ion-color-success-contrast-rgb: 255, 255, 255;
    --ion-color-success-shade: #0ec254;
    --ion-color-success-tint: #28e070;
  
    /** warning **/
    --ion-color-warning: #ffce00;
    --ion-color-warning-rgb: 255, 206, 0;
    --ion-color-warning-contrast: #ffffff;
    --ion-color-warning-contrast-rgb: 255, 255, 255;
    --ion-color-warning-shade: #e0b500;
    --ion-color-warning-tint: #ffd31a;
  
    /** danger **/
    --ion-color-danger: #f04141;
    --ion-color-danger-rgb: 245, 61, 61;
    --ion-color-danger-contrast: #ffffff;
    --ion-color-danger-contrast-rgb: 255, 255, 255;
    --ion-color-danger-shade: #d33939;
    --ion-color-danger-tint: #f25454;
  
    /** dark **/
    --ion-color-dark: #ffffff;
    --ion-color-dark-rgb: 34, 34, 34;
    --ion-color-dark-contrast: #ffffff;
    --ion-color-dark-contrast-rgb: 255, 255, 255;
    --ion-color-dark-shade: #1e2023;
    --ion-color-dark-tint: #c2c2c2;
    --ion-color-dark-text: white;
  
    /** medium **/
    --ion-color-medium: #989aa2;
    --ion-color-medium-rgb: 152, 154, 162;
    --ion-color-medium-contrast: #ffffff;
    --ion-color-medium-contrast-rgb: 255, 255, 255;
    --ion-color-medium-shade: #86888f;
    --ion-color-medium-tint: #a2a4ab;
  
    /** light **/
    --ion-color-light: #f4f5f8;
    --ion-color-light-rgb: 244, 244, 244;
    --ion-color-light-contrast: #000000;
    --ion-color-light-contrast-rgb: 0, 0, 0;
    --ion-color-light-shade: #d7d8da;
    --ion-color-light-tint: #f5f6f9;
  }

  body.dark {
    --ion-text-color: #ffffff;
    --ion-text-color-rgb: 255,255,255;
    --ion-color-primary: #428cff;
    --ion-color-primary-rgb: 66, 140, 255;
    --ion-color-primary-contrast: #ffffff;
    --ion-color-primary-contrast-rgb: 255, 255, 255;
    --ion-color-primary-shade: #3a7be0;
    --ion-color-primary-tint: #5598ff;
  
    --ion-color-secondary: #50c8ff;
    --ion-color-secondary-rgb: 80, 200, 255;
    --ion-color-secondary-contrast: #ffffff;
    --ion-color-secondary-contrast-rgb: 255, 255, 255;
    --ion-color-secondary-shade: #46b0e0;
    --ion-color-secondary-tint: #62ceff;
  
    --ion-color-tertiary: #6a64ff;
    --ion-color-tertiary-rgb: 106, 100, 255;
    --ion-color-tertiary-contrast: #ffffff;
    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
    --ion-color-tertiary-shade: #5d58e0;
    --ion-color-tertiary-tint: #7974ff;
  
    --ion-color-success: #2fdf75;
    --ion-color-success-rgb: 47, 223, 117;
    --ion-color-success-contrast: #000000;
    --ion-color-success-contrast-rgb: 0, 0, 0;
    --ion-color-success-shade: #29c467;
    --ion-color-success-tint: #44e283;
  
    --ion-color-warning: #ffd534;
    --ion-color-warning-rgb: 255, 213, 52;
    --ion-color-warning-contrast: #000000;
    --ion-color-warning-contrast-rgb: 0, 0, 0;
    --ion-color-warning-shade: #e0bb2e;
    --ion-color-warning-tint: #ffd948;
  
    --ion-color-danger: #ff4961;
    --ion-color-danger-rgb: 255, 73, 97;
    --ion-color-danger-contrast: #ffffff;
    --ion-color-danger-contrast-rgb: 255, 255, 255;
    --ion-color-danger-shade: #e04055;
    --ion-color-danger-tint: #ff5b71;
  
    --ion-color-dark: #f4f5f8;
    --ion-color-dark-rgb: 244, 245, 248;
    --ion-color-dark-contrast: #616161;
    --ion-color-dark-contrast-rgb: 0, 0, 0;
    --ion-color-dark-shade: #d7d8da;
    --ion-color-dark-tint: #f5f6f9;
  
    --ion-color-medium: #989aa2;
    --ion-color-medium-rgb: 152, 154, 162;
    --ion-color-medium-contrast: #000000;
    --ion-color-medium-contrast-rgb: 0, 0, 0;
    --ion-color-medium-shade: #8d8d8d;
    --ion-color-medium-tint: #a2a4ab;
  
    --ion-color-light: #6e6e6e;
    --ion-color-light-rgb: 34, 36, 40;
    --ion-color-light-contrast: #ffffff;
    --ion-color-light-contrast-rgb: 255, 255, 255;
    --ion-color-light-shade: #aaaaaa;
    --ion-color-light-tint: #9c9c9c;
    --color-toolbar-background: black;
    --color-toolbar-text: white;
  }
  
  /*
     * iOS Dark Theme
     * -------------------------------------------
     */
  
  .ios body.dark {
    --ion-background-color: #000000;
    --ion-background-color-rgb: 0, 0, 0;
    --ion-text-color: #ffffff;
    --ion-text-color-rgb: 255,255,255;
  
    --ion-color-step-50: #ffffff;
    --ion-color-step-100: #ffffff;
    --ion-color-step-150: #ffffff;
    --ion-color-step-200: #ffffff;
    --ion-color-step-250: #ffffff;
    --ion-color-step-300: #ffffff;
    --ion-color-step-350: #ffffff;
    --ion-color-step-400: #ffffff;
    --ion-color-step-450: #ffffff;
    --ion-color-step-500: #ffffff;
    --ion-color-step-550: #ffffff;
    --ion-color-step-600: #ffffff;
    --ion-color-step-650: #ffffff;
    --ion-color-step-700: #ffffff;
    --ion-color-step-750: #ffffff;
    --ion-color-step-800: #ffffff;
    --ion-color-step-850: #ffffff;
    --ion-color-step-900: #ffffff;
    --ion-color-step-950: #ffffff;
  
    --ion-toolbar-background: #0d0d0d;
  
    --ion-item-background: #1c1c1c;
    --ion-item-background-activated: #313131;
    --color-toolbar-background: black;
    --color-toolbar-text: white;
  }
  
  .md body.dark {
    --ion-text-color: #ffffff;
    --ion-text-color-rgb: 255,255,255;
    --ion-background-color: #121212;
    --ion-background-color-rgb: 18, 18, 18;
    --ion-border-color: #636363;
    --ion-color-step-50: #ffffff;
    --ion-color-step-100: #ffffff;
    --ion-color-step-150: #ffffff;
    --ion-color-step-200: #ffffff;
    --ion-color-step-250: #ffffff;
    --ion-color-step-300: #ffffff;
    --ion-color-step-350: #ffffff;
    --ion-color-step-400: #ffffff;
    --ion-color-step-450: #ffffff;
    --ion-color-step-500: #ffffff;
    --ion-color-step-550: #ffffff;
    --ion-color-step-600: #ffffff;
    --ion-color-step-650: #ffffff;
    --ion-color-step-700: #ffffff;
    --ion-color-step-750: #ffffff;
    --ion-color-step-800: #ffffff;
    --ion-color-step-850: #ffffff;
    --ion-color-step-900: #ffffff;
    --ion-color-step-950: #ffffff;
    --ion-item-background: #1a1b1e;
    --color-toolbar-background: black;
    --color-toolbar-text: white;
  }
  
  @media (prefers-color-scheme: light) {
    :root {
      --color-toolbar-background: white;
      --color-toolbar-text: black;
    }
  }
  
  @media (prefers-color-scheme: dark) {
    :root {
      --color-toolbar-background: black;
      --color-toolbar-text: white;
      color: #ffffff;
      --ion-text-color:#ffffff ;
    }
  }

